completed authentication with JWT

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DATABASE_URL=mongodb+srv://lumjc:cck441@cluster0.pmn64.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+JWT_KEY = SJJSNGWRJGNOWNRGKANGKJNNKJEH
