--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-validator": "^6.12.0",
     "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongodb": "^3.6.8",
     "mongoose": "^5.13.2",
     "morgan": "^1.10.0",
